--- a/starter-code/public/admin.html
+++ b/starter-code/public/admin.html
@@ -51,7 +51,7 @@
     <script src="/vendor/scripts/page.js"></script>
     <script src="/vendor/scripts/handlebars.js"></script>
 
-    <script src="/scripts/models/article.js"></script>
+    <!-- <script src="/scripts/models/article.js"></script> -->
     <script src="/scripts/views/adminView.js"></script>
   </body>
 </html>
